# tensor-cores

./: .astylerc  .gitignore  .gitinore  CMakeLists.txt  CMakePresets.json  Config.h.in  README.md  cuda.md  hip.md  logFile.txt  notes.md
example/: CMakeLists.txt  main.cpp  main.cpp.orig
include/: cuda_utils.hpp  gemm.cuh  gemm.hpp  gemm_cuda.hpp  helper.hpp  kernels.hpp  types.hpp  util.hpp  utils.hpp
include/kernels/cuda/: 1_naive.cu  1_naive.cuh  2_shared_mem_cache_blocking.cu  2_shared_mem_cache_blocking.cuh  3_1d_blocktiling.cu  3_1d_blocktiling.cuh  4_2d_blocktiling.cu  4_2d_blocktiling.cuh  5_vectorise_smem.cuh  global_mem_coalescing.cu  kernels.cuh  naive.cu  shared_mem_cache_blocking.cu
include/kernels/hip/: kernels.hpp
notes/: cmake.md
scripts/: lumi-env.sh
spack/: cuda.yaml  lumi.yaml
src/: cuda_utils.cpp  gemm.cpp  gemm.cu  main.cpp  utils.cpp
src/kernels/cuda/: 1_naive.cu  2_shared_mem_cache_blocking.cu  3_1d_blocktiling.cu  4_2d_blocktiling.cu  5_vectorise_smem.cu  CMakeLists.txt  cuda_kernels.cu
